manifests/ingress-polaris.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polaris-api
  namespace: polaris
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: polaris.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polaris
                port:
                  number: 8181
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polaris-mgmt
  namespace: polaris
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: polaris-mgmt.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polaris-mgmt
                port:
                  number: 8182
