manifests/ingress-spark-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ui
  namespace: spark
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: spark.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-connect-server-0-driver-svc
                port:
                  number: 4040
